# MTDediMod

./: .busted  .gitattributes  .gitignore  .gitmodules  .luarc-client.json  .luarc.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  opencode.json  pato.json  setup_cross_compile.sh  toolchain.cmake
.agents/skills/mt-mod-update/: SKILL.md
.agents/skills/mtdedimod-debugging/: SKILL.md
.agents/skills/mtdedimod-deploy/: SKILL.md
.agents/skills/secrets-management/: SKILL.md
.agents/skills/server-access/: SKILL.md
.agents/skills/ue4ss-fetch-api/: SKILL.md
.agents/skills/ue4ss-input-polling/: SKILL.md
.agents/skills/ue4ss-umg-creation/: SKILL.md
.agents/skills/ue4ss-widget-manipulation/: SKILL.md
.github/workflows/: msvc_build.yml  nix-release.yml
ClientScripts/: CRC32.lua  Commands.lua  EmoteWidget.lua  Helpers.lua  IntegrityChecker.lua  ModConfig.lua  ModManager.lua  RPRestrictions.lua  RoadsideServiceFilter.lua  SatNav.lua  Shortcuts.lua  Statics.lua  TeleportManager.lua  TeleportWidget.lua  VehicleManager.lua  VehicleSaveSpawn.lua  ViewportManager.lua  main.lua
Scripts/: AssetManager.lua  CargoManager.lua  CharacterManager.lua  ChatManager.lua  Commands.lua  CompanyManager.lua  DepotManager.lua  EventManager.lua  Helpers.lua  PlayerManager.lua  PropertyManager.lua  ServerManager.lua  Statics.lua  VehicleManager.lua  ViewportManager.lua  Webclient.lua  Webserver.lua  check-types.sh  main.lua
TypeGenerator/Scripts/: main.lua
client-types/: ACLPlugin.lua  ACLPlugin_enums.lua  AC_CompanyDriver.lua  AIModule.lua  AirCity.lua  AmbulanceJobMarker.lua  AmbulancePassengerMarker.lua  AmbulanceSpawner.lua  ArrowSign_Plate.lua  AsyncLoadingScreen.lua  Atlas_4x2_Semi.lua  Atlas_6x2_Dryvan.lua  Atlas_6x2_Semi.lua  Atlas_6x2_Tanker.lua  Atlas_6x4_Semi.lua  Atlas_8x4_Dump.lua  AudioExtensions.lua  AudioMixer_enums.lua  AudioPlatformConfiguration_enums.lua  BPF_RandomByLocation.lua  BP_Farm_01.lua  BP_FishingVil_House_05.lua  BP_PCG_FoliageArea.lua  BP_PCG_Forest.lua  BP_PCG_Plain_01.lua  BP_Refinery_Crossroad_01.lua  BP_SmallHouse_02_Construction.lua  BP_SmallHouse_03_Construction.lua  Bar_02_Move.lua  Barrel_01_Lid.lua  BeanSackPallet.lua  Bed_06.lua  Bed_07.lua  BlinkerRightControlWidgetBP.lua  Bongo_Bus.lua  Bora.lua  BoxPalletA.lua  Brutus_FireEngine.lua  Brutus_Tanker.lua  BuildingBlueprint_Vendor.lua  (+458 more)
docs/: LuaTypeAnnotations.md  LuaTypeSetupPlan.md  lua-type-safety-plan.md
machines/amc-peripheral/: configuration.nix  hardware-configuration.nix
machines/asean-mt-server/: configuration.nix
nix/: db_backup.nix  scripts.nix
nix/kimaki/: _npmDepsHash  default.nix  package-lock.json  package.json
package-client/ue4ss/: UE4SS-settings.ini
package-client/ue4ss/Mods/: mods.json  mods.txt
package-client/ue4ss/Mods/MotorTownClientMod/Scripts/: Statics.lua  VehicleManager.lua
patches-ue4ss/: lua-lgc-weak-table-metatable-fix.patch  ue4ss-skip-delegate-properties-in-struct-conversion.patch
proxy_generator/: proxy_generator.py
proxy_generator/exports/: dwmapi.exports
secrets/: backend-staging.age  backend.age  coding-agent-app-key.age  cookies.age  discordlink-bot-token.age  dokuwiki-oauth.age  ecoUserToken.age  github-pat.age  github-runner-ssh.age  github-runner-token-peripheral.age  github-runner-token.age  oauth2-proxy-peripheral.age  oauth2-proxy.age  opencode-peripheral.age  opencode.age  peripheral-bots.age  secrets.nix  steam.age  tailscale.age
shared/: VehicleSerialization.lua
shared/MTHelpers/: Execution.lua  GameState.lua  Guid.lua  Types.lua  init.lua
shared/fetch/: init.lua
src/: CMakeLists.txt  EventManager.cpp  EventManager.h  EventsRoute.cpp  EventsRoute.h  HookManager.h  LuaHttpServer.cpp  LuaHttpServer.h  dllmain.cpp  dllmain.h  modsmanager.cpp  statics.cpp  webroute.cpp  webroute.h  webserver.cpp  webserver.h
test/: helpers_spec.lua  json_spec.lua  ue4ss_stubs.lua  webserver_spec.lua
tools/: check-types.sh  patch-pe-debug-dir.py
types/: .gitignore  AC_PoliceVehicle.lua  AC_Racer.lua  AC_Roamer.lua  ActionPopupWidgetBP.lua  ActorPreviewBP.lua  Ambi.lua  AnimBP_MTCharacter.lua  AppleBox.lua  ArrowSign.lua  AssetRegistry_enums.lua  AsyncLoadingScreen.lua  AsyncLoadingScreen_enums.lua  Atlas_4x2_Semi.lua  Atlas_6x2_Garbage.lua  Atlas_6x2_Semi.lua  Atlas_6x2_Tanker.lua  Atlas_6x4_Semi.lua  Attachment_ToggleLightVendor.lua  AudioExtensions_enums.lua  AudioSynesthesia.lua  AudioWidgets.lua  BP_24x24_Church.lua  BP_24x24_Shop_01.lua  BP_48x48_ShopLarge_02a.lua  BP_Crossing_TypeA.lua  BP_Crossroad_3Way_01_TypeA.lua  BP_Crossroad_3Way_04_TypeA.lua  BP_FishingVil_House_01.lua  BP_PCG_Forest_01.lua  BP_TownHouse_01.lua  BP_TownHouse_02.lua  BP_TownHouse_04.lua  BP_TownHouse_05.lua  BP_TownHouse_06.lua  Banker.lua  Barrel_01.lua  Bed_02_DUPL_1.lua  Bed_02_DUPL_2.lua  Bed_03_DUPL_1.lua  (+608 more)
types/game/: AC_Character.lua  AC_Ghost.lua  AdvancedWidgets.lua  AirlineMealPallet.lua  AnimGraphRuntime.lua  AssetRegistry.lua  AsyncLoadingScreen_enums.lua  AudioCapture.lua  AudioMixer.lua  AudioWidgets_enums.lua  BP_96x96_Hospital_MT.lua  BP_Crossroad_3Way_02_TypeD.lua  BP_Dormitory_03.lua  BP_Factory_Crossroad_01.lua  BP_FishingVil_House_02.lua  BP_FishingVil_House_03.lua  BP_FloatingMovement.lua  BP_PCG_Forest_01.lua  BP_PCG_Jungle_01.lua  BP_PCG_Logging_01.lua  BP_Pit_01.lua  BP_SmallHouse_01.lua  BP_SmallHouse_01_Construction.lua  BP_SmallHouse_02.lua  BP_SmallHouse_03.lua  BP_SmallRoadSystem1_MT.lua  BP_TownHouse_03.lua  BP_TownHouse_04.lua  BankMarker.lua  Barrier_01.lua  Base_OutDoor.lua  Bed_01.lua  Bongo.lua  BottleBox.lua  BoxPalletB.lua  BoxPalleteC.lua  Brutus_Ambulance.lua  Bulb_02.lua  BusComponent.lua  BusJobMarker.lua  (+792 more)
(+6 files in other folders)
